--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
     <div id="particles-js"></div>
 
     <div id="music-icon"></div>
-    <audio id="bgMusic" src="music.mp3" autoplay controls></audio>
-    
+
+    <audio id="bgMusic" autoplay loop>
+      <source src="music.mp3" type="audio/mpeg" />
+      <!-- Replace with the path to your audio file -->
+    </audio>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
