--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="css/index.css" />
-    <title>David Uche - Software Developer</title>
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <title>David Uche - Birthday Gift</title>
+    <link rel="icon" href="photo1.jpg" type="image/x-icon" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+      name="description"
+      content="A simple but cool Birthday card for you..."
+    />
   </head>
   <body>
     <div class="container">
